--- a/index.html
+++ b/index.html
@@ -44,22 +44,22 @@
     <form id="registrationForm">
         <div class="form-group">
             <label for="name">Nome:</label>
-            <input type="text" id="name" name="name" required>
+            <input type="text" id="name" name="name">
             <span class="error" id="nameError"></span>
         </div>
         <div class="form-group">
             <label for="email">E-mail:</label>
-            <input type="email" id="email" name="email" required>
+            <input type="email" id="email" name="email">
             <span class="error" id="emailError"></span>
         </div>
         <div class="form-group">
             <label for="confirmEmail">Confirme o E-mail:</label>
-            <input type="email" id="confirmEmail" name="confirmEmail" required>
+            <input type="email" id="confirmEmail" name="confirmEmail">
             <span class="error" id="confirmEmailError"></span>
         </div>
         <div class="form-group">
             <label for="password">Senha:</label>
-            <input type="password" id="password" name="password" required>
+            <input type="password" id="password" name="password">
             <span class="error" id="passwordError"></span>
         </div>
         <div class="form-group">
